2007-09-02  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- Update user settings daemon D-Bus defines now that it's in
			NetworkManager.h
		- s/applet_connection->settings/applet_connection->connection/g since
			that's what it really is
		- Update for change of NMConnection to GObject subclass
		- (read_connection_from_gconf): clear ->id before trying to get the
			value again so that nm_gconf_get_string_helper() doesn't complain

	* src/applet.c
		- Update for change of NMConnection to GObject subclass

	* src/applet-dbus-manager.c
	  src/applet.h
		- Update user settings daemon D-Bus defines now that it's in
			NetworkManager.h

2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* src/vpn-properties/clipboard.c
	  src/vpn-properties/nm-vpn-properties.glade
	  src/vpn-properties/nm-vpn-properties.c
		- Use GtkAssistant instead of GnomeDruid on GTK+ >= 2.10
		    (gnome.org #470554)

2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* src/applet.c
		- (about_dialog_activate_link_cb): don't use gnome_url_open()
		(gnome.org #460671)

2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* nm-applet.desktop
		- show in XFCE too (gnome.org #471608)

2007-08-29  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- New D-Bus service name

	* src/applet-marshal.list
	  src/applet-marshal-main.c
	  src/applet-dbus-manager.c
	  src/applet-dbus-manager.h
	  src/applet.h
	  src/applet.c
	  src/Makefile.am
	  configure.ac
		- Move most D-Bus housekeeping over to the D-Bus manager rather
		than a lot of hardcoded junk in applet-dbus.c and applet-dbus-info.c

	* src/nm-utils.c
	  src/nm-utils.h
		- Remove functions that are no longer used

	* src/applet-dbus-info.c
	  src/applet-dbus-info.h
	  src/applet-dbus.c
	  src/applet-dbus.h
		- Remove, no longer used; some bits need to be replaced by Tambet's new